--- a/.env.ren
+++ b/.env.ren
@@ -2,6 +2,15 @@
 TELEGRAM_BOT_TOKEN=
 OWNER=
 
+# --- database ---
+# MONGO_HOST=
+# MONGO_PORT=
+# MONGO_USER=
+# MONGO_PASS=
+# MONGO_NAME=
+
+MONGO_URL=mongodb://127.0.0.1:27017
+
 # --- redis ---
 # RD_DB=
 # RD_HOST=
